--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 ## Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+
+
+.vscode
+
 ## Dependency directory
 node_modules
 
