--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
 # Node rules:
-## Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
-
 
 .vscode
 
 ## Dependency directory
 node_modules
 
-# Book build output
-_book
-
-# eBook build output
-*.epub
-*.mobi
+linkedIn
