--- a/Node.JS/express/package.json
+++ b/Node.JS/express/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "1461658_express",
+  "name": "express",
   "version": "1.0.0",
+  "description": "Demo project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \\\"Error: no test specified\\\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.4",
-    "joi": "^14.3.1",
-    "nodemon": "^1.18.9"
-  },
-  "devDependencies": {},
-  "description": ""
+  "keywords": [
+    "express",
+    "node"
+  ],
+  "author": "Noor Salim",
+  "license": "MIT"
 }
