--- a/Node.JS/package.json
+++ b/Node.JS/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "1461658_node",
+  "name": "Node.JS",
   "version": "1.0.0",
   "description": "",
-  "main": "demo.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
