--- a/Node.JS/express/package.json
+++ b/Node.JS/express/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "jshint": "^2.12.0"
+    "jshint": "^2.12.0",
+    "morgan": "^1.10.0"
   }
 }
