--- a/Node.JS/express/package.json
+++ b/Node.JS/express/package.json
@@ -14,7 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.1"
   },
   "devDependencies": {
     "jshint": "^2.12.0",
