--- a/Node.JS/express/package.json
+++ b/Node.JS/express/package.json
@@ -14,7 +14,10 @@
   "license": "MIT",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.10.1"
   },
   "devDependencies": {
