--- a/nodejs/express/package.json
+++ b/nodejs/express/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "mongoose": "^5.13.10",
+    "systeminformation": "^5.11.15",
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
