--- a/nodejs/express/package.json
+++ b/nodejs/express/package.json
@@ -17,8 +17,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.18.2",
     "mongoose": "^5.13.10",
-    "systeminformation": "^5.11.15",
-    "xmldom": "^0.6.0"
+    "systeminformation": "^5.11.15"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
